# LibManSys

./: AuthManager.cpp  AuthManager.h  Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Catalogue.cpp  Catalogue.h  Library.cpp  Library.h  Reader.cpp  Reader.h  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
